[package]
name = "sunrise"
version = "0.1.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[dependencies]
egg-mode = { git = "https://github.com/QuietMisdreavus/twitter-rs.git" }
reqwest = "0.9"
tokio = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.0"
serde_derive = "1.0.0"
toml = "0.4.0"
slog = "2.2"
slog-term = "2.4"
slog-async = "2.3"
clap = "2.24.2"
serde_json = "1.0.2"
glob = "0.2"
egg-mode-text = "1.14"
