[package]
name = "sunrise"
version = "0.1.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[dependencies]
egg-mode = "0.13"
reqwest = "0.9"
tokio = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.0"
serde_derive = "1.0.0"
toml = "0.5.0"
slog = "2.2"
slog-term = "2.4"
slog-async = "2.3"
snap = "0.2.5"
clap = "2.24.2"
serde_json = "1.0.2"
glob = "0.3"
egg-mode-text = "1.14"
